fix(feedback-page): fix layout issue

--- a/views/ArmaTuPlan/styles.module.scss
+++ b/views/ArmaTuPlan/styles.module.scss
@@ -3,6 +3,7 @@
 .section{
     display: flex;
     flex-direction: column;
+    flex: 1;
     &__stepper{
         flex: 1;
         @include desktop {
